<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="290dp">

        <TextView
            android:id="@+id/txt_expression"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/expression"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_expression"
            android:layout_alignEnd="@+id/txt_expression"
            android:layout_alignRight="@+id/txt_expression"
            android:layout_marginTop="25dp"
            android:hint="@string/result"
            android:textSize="36sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="68dp">

        <Button
            android:id="@+id/b_num7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/seven"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/eight"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/nine"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num10"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/plus" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/b_num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/six"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/five"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/four"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num11"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/substraction" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/b_num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/three"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/two"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/one"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num12"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mul"
            android:text="@string/multiply" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/b_num15"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/del" />

        <Button
            android:id="@+id/b_num0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/zero"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/b_num14"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="equal"
            android:text="@string/equal" />

        <Button
            android:id="@+id/b_num13"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="div"
            android:text="@string/didv" />
    </TableRow>
</TableLayout>